tests/type-errors/types/nocopy_enum_union_with_nodrop_variant.cx
struct Resource : @nodrop {
    int value;
};

enum union Result : @nocopy {
    ok :: int,
    err :: Resource
};

int main() {
    Result value;
    return 0;
}
